k8s/security/03-pod-security.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-fn
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout-fn
  template:
    metadata:
      labels:
        app: checkout-fn
    spec:
      serviceAccountName: sa-checkout
      automountServiceAccountToken: false
      containers:
        - name: checkout-fn
          image: ead/checkout-fn:v7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-fn
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricing-fn
  template:
    metadata:
      labels:
        app: pricing-fn
    spec:
      serviceAccountName: sa-pricing
      automountServiceAccountToken: false
      containers:
        - name: pricing-fn
          image: ead/pricing-fn:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-fn
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-fn
  template:
    metadata:
      labels:
        app: inventory-fn
    spec:
      serviceAccountName: sa-inventory
      automountServiceAccountToken: false
      containers:
        - name: inventory-fn
          image: ead/inventory-fn:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: sa-gateway
      automountServiceAccountToken: false
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["NET_RAW"]
              add: ["NET_BIND_SERVICE","CHOWN","SETUID","SETGID","DAC_OVERRIDE"]
      volumes:
        - name: html
          configMap:
            name: ead-ui
        - name: conf
          configMap:
            name: ead-nginx-conf
